--- a/mon-entreprise/source/rules/profession-libérale.yaml
+++ b/mon-entreprise/source/rules/profession-libérale.yaml
@@ -394,6 +394,7 @@ dirigeant . indépendant . PL . PAMC . CURPS:
     régularisé. Un nouvel échéancier de cotisations sera ensuite adressé.
   acronyme: CURPS
   applicable si: revenu professionnel > 0
+  non applicable si: métier . secteur médecin = 'non conventionné'
   formule:
     produit:
       assiette: assiette des cotisations
@@ -789,18 +790,26 @@ dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation 
 dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire:
   formule:
     produit:
-      assiette: 2960.40 €/an
-      taux: réduction de la cotisation forfaitaire
+      assiette: 2960.40 €/an 
+      facteur: 
+        variations: 
+          - si: taux réduction
+            alors: taux réduction
+          - sinon: 100%
     arrondi: oui
 
-dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . réduction de la cotisation forfaitaire:
+dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable:
   applicable si: assiette des cotisations < 85% * plafond sécurité sociale temps plein
   description: |
     Vous avez la possibilité de bénéficier d'une réduction de cotisation
     pour la retraite complémentaire si vous en faites la demande. [En savoir
-    plus](/documentation/dirigeant/indépendant/PL/PAM/CARCDSF/retraite-complémentaire/forfaitaire/réduction)
+    plus](/documentation/dirigeant/indépendant/PL/CARCDSF/retraite-complémentaire/cotisation-forfaitaire/réduction)
   type: notification
-  note: |
+  formule: oui
+
+dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . taux réduction:
+  applicable si: réduction applicable
+  description: |
     Les affiliés dont les revenus professionnels nets sur l'année N-1 sont inférieurs à 85
     % du PASS en vigueur au 1er janvier de l’année considérée (34 966 € en 2020)
     peuvent, sur demande, obtenir une réduction de la cotisation forfaitaire.
@@ -812,8 +821,7 @@ dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . réduction 
     photocopie de la déclaration d’impôt n° 2042 C ou 2035 ou 2065 et de leurs
     annexes (2033 B et D ou 2053 et 2058 A) de l’année 2019.
   unité: '%'
-  formule: assiette des cotisations / (85% * plafond sécurité sociale temps plein)
-
+  formule:  assiette des cotisations / (85% * plafond sécurité sociale temps plein)
   références:
     Site CARCDSF: http://www.carcdsf.fr/cotisations-du-praticien/montant-des-cotisations
 
