--- a/mon-entreprise/source/rules/protection-sociale.yaml
+++ b/mon-entreprise/source/rules/protection-sociale.yaml
@@ -267,9 +267,9 @@ protection sociale . santé:
 
 
 protection sociale . invaditité et décès:
-  icônes: 👻
+  icônes: 🦽
   type: branche
-  résumé: Garantit le versement d'une pension en cas d'invalidité et un capital à vos proche en cas de décès.
+  résumé: Garantit le versement d'une pension en cas d'invalidité et un capital à vos proches en cas de décès.
   description: |
     Vous pouvez être reconnu invalide si votre capacité de travail et de gain est réduite d'au moins 2/3 à la suite d'un accident ou d'une maladie d'origine non professionnelle. Vous pouvez obtenir le versement d'une pension d'invalidité afin de compenser la perte de revenus.
 
