--- a/mon-entreprise/source/rules/profession-libérale.yaml
+++ b/mon-entreprise/source/rules/profession-libérale.yaml
@@ -32,7 +32,7 @@ dirigeant . indépendant . PL . métier . rattaché CIPAV:
     - Guide-conférencier
 
 dirigeant . indépendant . PL . métier . santé:
-  titre: Practicien ou auxiliaire médical
+  titre: Praticien ou auxiliaire médical
   question: Quel métier exercez-vous en tant que professionnel de santé ?
   description: |
     Si vous êtes praticien ou auxiliaire médical conventionné, vous relevez du
@@ -388,7 +388,7 @@ dirigeant . indépendant . PL . PAMC . proportion recette activité non conventi
 dirigeant . indépendant . PL . PAMC . remplaçant:
   question: Exercez-vous votre activité exclusivement en tant que remplaçant ?
   description: |
-    Les practicien et auxiliaire médical exerçant une activité de remplacement ne sont pas redevable de la contribution aux unions régionales des professionnels de santé (CURPS)
+    Les practicien et auxiliaire médical exerçant une activité de remplacement ne sont pas redevables de la contribution aux unions régionales des professionnels de santé (CURPS)
   par défaut: non
 
 dirigeant . indépendant . PL . PAMC . CURPS:
